# datacow

./: .gitignore  README.md  data_utilities.py  deploy.sh  deploy.yml  dockerfile  no_swiping.sh  pyproject.toml
access_logs/: access_logs.sql  analytics_prod.py  caddy2postgres.py  normalize_logs.py  prof.py  websites_ip.py
adhoc/fpl/: duckdb_haaland.py
adhoc/mint/: mint_duck.py
adhoc/spotify/: audio_feat.py  listening_data.py  sp_data.ipynb
analysis/: activity_watch.sql  caddy.sql  nginx_log_analysis.py  screentime.sql  spotify.sql  spotify_5_30.sql
apis/: art-inst.py  lights.py  nyc_taxi.py
fails/: caddy2json.sql
fav_places/: .gitignore  create_map.py  hood_labels.py  place_id.py  place_info.py  process_takeout.py  pyproject.toml  readme.md  resize_images.py  workflow.sh
fpl/: fpl.py  haaland.csv  scrape_fb_ref.py  tor.py
hooks/: no_swiping.sh
launchd/: screentime.py
mint/: mint_duck.py
ntfy/: ntfy.py
other/: art-inst.py  cal.py
processing/: audio_feat.py  aw2postgres.py  data_utilities.py  getIPdata.py  hello2.py  listening_data.py  makefile  mint.py  postgres_utils.py  prof.py  recent_listening.py  websites_ip.py
scheduled/: cal.py  cf_export.py  hi.py  logs2fct.py  main.py  requirements.txt  utils.py
screentime/: aw2postgres.py  bugs.py  screentime.sql
spotify/: analysis.py  spotify.sql
visual/: .gitignore  app.css
visual/pages/: index.md
visual/sources/apple/: connection.yaml  exercise.sql  rolling_hr.sql  sdnn.sql  steps.sql
visual/sources/logs/: hours.sql
