[tool.poetry]
name = "datacow"
version = "0.1.0"
description = ""
authors = ["Edwin Zamudio <zamudio.e13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
duckdb = "^0.10.2"
pandas = "^2.2.2"
pydantic = "^2.7.0"
ipykernel = "^6.29.4"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
altair = "^5.3.0"
schedule = "^1.2.1"
structlog = "^24.1.0"
python-crontab = "^3.0.0"
rich = "^13.7.1"
infisical-python = "^2.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
