[tool.poetry]
name = "fav-places"
version = "0.1.0"
description = ""
authors = ["Edwin Zamudio <zamudio.e13@gmail.com>"]
readme = "README.md"
packages = [{ include = "fav_places" }]

[tool.poetry.dependencies]
python = "^3.11"
folium = "^0.16.0"
pandas = "^2.2.1"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
